--- a/package.json
+++ b/package.json
@@ -20,16 +20,26 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "bcrypt": "^5.1.1",
+    "cookie": "^1.0.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.2",
     "express": "^4.19.2",
     "kysely": "^0.27.4",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "redis": "^4.7.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/github": "^11.0.0",
     "@semantic-release/release-notes-generator": "^14.0.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^0.6.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
@@ -44,6 +54,7 @@
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "prisma": "^5.21.1",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
