--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.9.0"
+    "typescript-eslint": "^8.9.0",
+    "winston": "^3.17.0"
   }
 }
