--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "kysely": "^0.27.4",
     "pg": "^8.13.0",
     "redis": "^4.7.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
@@ -58,7 +59,6 @@
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.9.0",
-    "winston": "^3.17.0"
+    "typescript-eslint": "^8.9.0"
   }
 }
