--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepare": "husky || true",
     "test": "jest --runInBand --verbose --coverage",
     "build-docker-image": "docker build -t testservice .",
-    "start:prod": "npx prisma db push && node src/index.js"
+    "start:prod": "npx prisma db push && node dist/src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -30,8 +30,8 @@
     "kysely": "^0.27.4",
     "pg": "^8.13.0",
     "redis": "^4.7.0",
-    "zod": "^3.23.8",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
@@ -45,10 +45,9 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/pg": "^8.11.10",
-    "@typescript-eslint/eslint-plugin": "^8.9.0",
-    "@typescript-eslint/parser": "^8.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.1-alpha.6",
     "artillery": "^2.0.21",
-    "eslint": "^9.12.0",
+    "eslint": "^9.15.0",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
