--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/pg": "^8.11.10",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.14.1-alpha.6",
     "artillery": "^2.0.21",
     "eslint": "^9.15.0",
