--- a/package.json
+++ b/package.json
@@ -47,9 +47,10 @@
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.14.1-alpha.6",
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
     "artillery": "^2.0.21",
-    "eslint": "^9.15.0",
+    "eslint": "^9.12.0",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
