Debugging why timeout error happens for global afterAll take 8

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,6 +8,13 @@ on:
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
+
+    services: 
+      redis:
+        image: redis:latest
+        ports:
+          - 6379:6379
+          
     steps:
       # Step 1 - Checkout code
       - uses: actions/checkout@v3
