--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,16 +5,28 @@ on:
     branches:
       - master
 
+env:
+  NODE_ENV: test
+  DATABASE_URL: postgres://postgres:postgres@localhost:5435/postgres
+
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
 
-    services: 
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
+        ports:
+          - 5435:5432
       redis:
         image: redis:latest
         ports:
           - 6379:6379
-          
+
     steps:
       # Step 1 - Checkout code
       - uses: actions/checkout@v3
