--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   NODE_ENV: test
-  DATABASE_URL: postgres://postgres:postgres@localhost:5435/postgres
+  DATABASE_URL: postgresql://user:mypassword@localhost:5435/authservice
 
 jobs:
   build_and_test:
@@ -17,9 +17,9 @@ jobs:
       postgres:
         image: postgres:latest
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: mypassword
+          POSTGRES_DB: authservice
         ports:
           - 5435:5432
       redis:
