--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   NODE_ENV: test
-  DATABASE_URL: postgresql://user:mypassword@localhost:5435/authservice
+  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/postgres
 
 jobs:
   build_and_test:
@@ -17,11 +17,11 @@ jobs:
       postgres:
         image: postgres:latest
         env:
-          POSTGRES_USER: user
-          POSTGRES_PASSWORD: mypassword
-          POSTGRES_DB: authservice
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
         ports:
-          - 5435:5432
+          - 5432:5432
       redis:
         image: redis:latest
         ports:
