--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   NODE_ENV: test
-  DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+  DATABASE_URL: postgres://postgres:postgres@postgres:5432/postgres
 
 jobs:
   build_and_test:
@@ -21,11 +21,11 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: postgres
         ports:
-          - 5432:5432
+          - 5432
       redis:
         image: redis:latest
         ports:
-          - 6379:6379
+          - 6379
 
     steps:
       # Step 1 - Checkout code
