--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,6 +24,11 @@ jobs:
           - 5432
       redis:
         image: redis:latest
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
         ports:
           - 6379
 
@@ -41,14 +46,6 @@ jobs:
       # Step 4 - Running linter
       - name: Run Linter
         run: npm run lint
-
-      - name: Wait for Redis
-        run: |
-          until nc -z -v -w30 redis 6379; do
-            echo "Waiting for Redis to be ready..."
-            sleep 5
-          done
-          echo "Redis is ready!"
 
       # Step 5 - Running tests
       - name: Run Tests
