--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -51,12 +51,13 @@ jobs:
       - name: Wait for Redis to be ready
         run: |
           echo "Waiting for Redis to be ready..."
-          until nc -z -v -w30 redis 6379; do
+          # Increased timeout and retry period
+          until nc -z -v -w60 redis 6379; do
             echo "Waiting for Redis to be ready..."
-            sleep 5
+            sleep 10  # Increased sleep duration between checks
           done
           echo "Redis is ready!"  
-      
+
       # Step 6 - View Redis logs (optional for debugging)
       - name: View Redis Logs
         run: docker logs redis
