--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,8 +8,6 @@ on:
 env:
   NODE_ENV: test
   DATABASE_URL: postgres://postgres:postgres@postgres:5432/postgres
-  REDIS_HOST: redis 
-  REDIS_PORT: 6379
 
 jobs:
   build_and_test:
@@ -25,11 +23,15 @@ jobs:
         ports:
           - 5432:5432
 
-      redis: 
-        image: redis:alpine
+      redis:
+        image: redis:latest
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
         ports:
           - 6379:6379
-        options: --health-cmd "redis-server --test-memory 1000" --health-timeout 10s --health-retries 5
 
     steps:
       # Step 1 - Checkout code
