--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@faker-js/faker": "^9.2.0",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/github": "^11.0.0",
     "@semantic-release/release-notes-generator": "^14.0.1",
@@ -52,6 +53,7 @@
     "@typescript-eslint/parser": "^8.9.0",
     "artillery": "^2.0.21",
     "eslint": "^9.12.0",
+    "eslint-plugin-security": "^3.0.1",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
