--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.19.2",
     "kysely": "^0.27.4",
     "pg": "^8.13.0",
+    "prom-client": "^15.1.3",
     "redis": "^4.7.0",
     "winston": "^3.17.0",
     "zod": "^3.23.8"
